(lang dune 3.16)

(name aoc)

(source
 (github matt-gretton-dann/ocaml-aoc))

(authors "Matthew Gretton-Dann")

(maintainers "Matthew Gretton-Dann")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name aoc)
 (synopsis "Implementation of AoC competitions in OCaml")
 (description
  "Implementation of solutions to various Advent of Code exercises written in OCaml")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
